rlang/tests/tests_resources/invalid_tests/invalid_predicate.rlang
Predicate test := location != workshop == b
Predicate test1 := not location in workshop != location + workshop
Predicate test2 := not location or in and workshop and location
Predicate test3 := True + 1